# Synthesis-Route-Complexity-as-a-Predictor-of-Reported-Material-Performance

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: coord_entropy_results.csv
docs/: methods.md
output/results/: HONEST_ASSESSMENT.md  RESULTS_SUMMARY.md  analysis_dataset.csv  correlation_matrix.csv  feature_importance.csv  feature_importance_all.csv  feature_summary.csv  merged_dataset.csv  metric_counts.csv  mp_properties.csv  ols_all_properties.csv  ols_band_gap.csv  ols_density.csv  ols_energy_above_hull.csv  ols_formation_energy_per_atom.csv  ols_full_results.csv  pvalue_matrix.csv  subgroup_results.csv  vif.csv
output/results/diagnostics/: bootstrap_r2.csv  confound_check.csv  semi_partial_r2.csv  subgroup_fdr.csv
results/: anova_results.csv  class_stats.csv  composition_anova.csv  crystal_system_anova.csv  dataset_with_entropy.csv  element_entropy.csv  logreg_coefficients.csv  pettifor_anova.csv  roc_summary.csv  tukey_hsd.csv
src/: __init__.py  analysis.py  coord_env.py  data_loader.py  diagnostics.py  feature_extractor.py  materials_project.py  mp_downloader.py  performance_extractor.py  visualization.py
tests/: test_analysis.py  test_descriptors.py
